; ModuleID = '/home/carl/AnghaBench/git/extr_diff-no-index.c_populate_from_stdin.c'
source_filename = "/home/carl/AnghaBench/git/extr_diff-no-index.c_populate_from_stdin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.diff_filespec = type { i64, i32, i32, i32, i64 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@.str = private unnamed_addr constant [31 x i8] c"error while reading from stdin\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.diff_filespec*)* @populate_from_stdin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @populate_from_stdin(%struct.diff_filespec* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.diff_filespec*, align 8
  %4 = alloca %struct.strbuf, align 4
  %5 = alloca i64, align 8
  store %struct.diff_filespec* %0, %struct.diff_filespec** %3, align 8
  %6 = bitcast %struct.strbuf* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %6, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  store i64 0, i64* %5, align 8
  %7 = call i64 @strbuf_read(%struct.strbuf* %4, i32 0, i32 0)
  %8 = icmp slt i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = call i32 @error_errno(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  store i32 %10, i32* %2, align 4
  br label %24

11:                                               ; preds = %1
  %12 = load %struct.diff_filespec*, %struct.diff_filespec** %3, align 8
  %13 = getelementptr inbounds %struct.diff_filespec, %struct.diff_filespec* %12, i32 0, i32 4
  store i64 0, i64* %13, align 8
  %14 = call i32 @strbuf_detach(%struct.strbuf* %4, i64* %5)
  %15 = load %struct.diff_filespec*, %struct.diff_filespec** %3, align 8
  %16 = getelementptr inbounds %struct.diff_filespec, %struct.diff_filespec* %15, i32 0, i32 3
  store i32 %14, i32* %16, align 8
  %17 = load i64, i64* %5, align 8
  %18 = load %struct.diff_filespec*, %struct.diff_filespec** %3, align 8
  %19 = getelementptr inbounds %struct.diff_filespec, %struct.diff_filespec* %18, i32 0, i32 0
  store i64 %17, i64* %19, align 8
  %20 = load %struct.diff_filespec*, %struct.diff_filespec** %3, align 8
  %21 = getelementptr inbounds %struct.diff_filespec, %struct.diff_filespec* %20, i32 0, i32 1
  store i32 1, i32* %21, align 8
  %22 = load %struct.diff_filespec*, %struct.diff_filespec** %3, align 8
  %23 = getelementptr inbounds %struct.diff_filespec, %struct.diff_filespec* %22, i32 0, i32 2
  store i32 1, i32* %23, align 4
  store i32 0, i32* %2, align 4
  br label %24

24:                                               ; preds = %11, %9
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @strbuf_read(%struct.strbuf*, i32, i32) #2

declare dso_local i32 @error_errno(i8*) #2

declare dso_local i32 @strbuf_detach(%struct.strbuf*, i64*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
